[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["skojpish <skojpish@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.11.10"
aiogram = "^3.13.1"
loguru = "^0.7.2"
black = "^24.10.0"
aioredis = "^2.0.1"
redis = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
